Restructured BaseService class to reduce complexity