@@ -2,7 +2,6 @@ package com.codecrafters.hub.inventorymanagementsystem.service;
 
 import com.codecrafters.hub.inventorymanagementsystem.model.dto.request.carts.CartCreateRequest;
 import com.codecrafters.hub.inventorymanagementsystem.model.dto.request.carts.CartItemDto;
-import com.codecrafters.hub.inventorymanagementsystem.model.dto.request.carts.CartUpdateRequest;
 import com.codecrafters.hub.inventorymanagementsystem.model.dto.response.carts.CartResponse;
 import com.codecrafters.hub.inventorymanagementsystem.model.entity.Cart;
 import com.codecrafters.hub.inventorymanagementsystem.model.entity.CartItem;
@@ -10,43 +9,44 @@ import com.codecrafters.hub.inventorymanagementsystem.model.entity.Product;
 import com.codecrafters.hub.inventorymanagementsystem.model.entity.projection.CartProjection;
 import com.codecrafters.hub.inventorymanagementsystem.exception.DuplicateCartException;
 import com.codecrafters.hub.inventorymanagementsystem.repository.CartRepository;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 @Service
-public class CartService extends BaseService<Cart, Long, CartCreateRequest, CartUpdateRequest, CartResponse> {
+public class CartService extends BaseService<Cart, Long> {
     private final CartRepository repository;
     private final ProductService productService;
+    private final ObjectMapper objectMapper;
 
-    public CartService(CartRepository repository, ProductService productService) {
+    public CartService(CartRepository repository,
+                       ProductService productService,
+                       ObjectMapper objectMapper) {
         super(repository);
         this.repository = repository;
         this.productService = productService;
+        this.objectMapper = objectMapper;
     }
 
-    @Override
-    public CartResponse create(CartCreateRequest cartCreateRequest) {
-        if (repository.existsByUsername(cartCreateRequest.getUsername())) {
+    public CartResponse create(CartCreateRequest request) {
+        if (repository.existsByUsername(request.getUsername())) {
             throw new DuplicateCartException("User has already created a cart.");
         }
-        return super.create(cartCreateRequest);
-    }
 
-    public CartProjection findByUsername(String username) {
-        return repository.findByUsername(username, CartProjection.class).orElseThrow(EntityNotFoundException::new);
-    }
-
-    @Override
-    protected Cart convertToCreateEntity(CartCreateRequest request) {
-        return Cart
+        Cart cart = Cart
                 .builder()
                 .username(request.getUsername())
                 .cartItems(request.getCartItems().stream()
                         .map(this::getCartItemEntity)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
+
+        var createdEntity = super.save(cart);
+        return objectMapper.convertValue(createdEntity, CartResponse.class);
+    }
+
+    public CartProjection findByUsername(String username) {
+        return repository.findByUsername(username, CartProjection.class).orElseThrow(EntityNotFoundException::new);
     }
 
     private CartItem getCartItemEntity(CartItemDto cartItemDto) {
@@ -55,23 +55,6 @@ public class CartService extends BaseService<Cart, Long, CartCreateRequest, Cart
                 .builder()
                 .product(product)
                 .quantity(cartItemDto.getQuantity())
-                .build();
-    }
-
-    @Override
-    protected Cart convertToUpdateEntity(Cart entity, CartUpdateRequest request) {
-        entity.setCartItems(request.getCartItems().stream()
-                .map(this::getCartItemEntity)
-                .collect(Collectors.toList()));
-        return entity;
-    }
-
-    @Override
-    protected CartResponse convertToEntityResponse(Cart entity) {
-        return CartResponse
-                .builder()
-                .username(entity.getUsername())
-                .cartItems(entity.getCartItems())
                 .build();
     }
 }
